--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@ body{
 header{
     width: 1440px;
     height: 669px;
-    border: 2px solid forestgreen;
+    /* border: 2px solid forestgreen; */
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -35,7 +35,7 @@ header{
 .banner-section{
     width: 826px;
     height: 320px;
-    border: 2px solid fuchsia;
+    /* border: 2px solid fuchsia; */
 }
 .banner-title{
     font-size: 65px;
@@ -64,16 +64,17 @@ header{
 
 .donate-section{
     width: 1440px;
-    border: 2px solid slategray;
+    /* border: 2px solid slategray; */
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 50px;
 
 }
 .donate-today{
     width: 765px;
     height: 500px;
-    border: 2px solid lightcoral;
+    /* border: 2px solid lightcoral; */
     text-align: center;
 }
 .donate-title{
@@ -110,6 +111,75 @@ header{
 #other{
     margin-bottom: 10px;
     color: rgb(165, 168, 165);
+}
+
+/* Our Donate Plan */
+.our-donate-plan{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+.donate-plan-section{
+    width: 1130px;
+    height: 532px;
+    border: 2px solid red;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+.our-donate-item{
+    width: 691px;
+    height: 130px;
+    margin: 0px 0px 45px 0px;
+    border: 2px solid rgb(120, 205, 17);
+    text-align: center;
+}
+.our-donate-title{
+    font-size: 45px;
+    font-weight: 700;
+    padding-bottom: 20px;
+}
+.our-donate-description{
+    font-size: 18px;
+    font-weight: 400;
+}
+.our-donate-card{
+    display: flex;
+    gap: 20px;
+    margin-bottom: 0px;
+}
+.donate-card{
+    width: 360px;
+    height: 320px;
+    border: 2px solid fuchsia;
+    
+}
+.donate-card img{
+    padding: 63px 0px 29px 23px;
+}
+.donate-card h4{
+    font-size: 24px;
+    font-weight: 600;
+    padding: 0px 23px 16px 23px;
+}
+.donate-card p{
+    font-size: 16px;
+    font-weight: 400;
+    padding: 0px 22px 54px 23px;
+}
+.food{
+    border-radius: 5px;
+    background: rgba(79, 157, 166, 0.1);
+}
+.shelter{
+    border-radius: 5px;
+    background: rgba(255, 89, 89, 0.1);
+}
+.Education{
+    border-radius: 5px;
+    background: rgb(223, 216, 180);
 }
 /* rrrrrrrrrrr */
 @media screen and (max-width: 576px) {
