--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,17 @@
 /* Google Font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-body{
-    font-family: "Inter", sans-serif;
-    margin: 50px 130px 50px 130px;
-
-}
-
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+body{
+    font-family: "Inter", sans-serif;
+    margin: 50px 130px 50px 130px;
+     width: 1440px;
+     border: 2px solid lawngreen;
 }
 
 /* Header styles */
@@ -31,7 +32,7 @@ header{
     background-blend-mode: overlay;
 }
 
-/* */
+/* Banner section styles */
 .banner-section{
     width: 826px;
     height: 320px;
@@ -153,6 +154,7 @@ header{
 .donate-card{
     width: 360px;
     height: 320px;
+    padding-right: 30px;
     /* border: 2px solid fuchsia; */
     
 }
@@ -181,9 +183,62 @@ header{
     border-radius: 5px;
     background: rgb(223, 216, 180);
 }
+
+/* Yuor donet section */
+.Your-donation{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 110px;
+}
+.your-donation-section{
+    width: 1032px;
+    height: 477px;
+    border: 2px solid teal;
+    display: flex;
+    /* margin: ; */
+}
+.text-contant{
+    width: 493px;
+    height: 374px;
+    border: solid fuchsia;
+    margin: 52px 94px 52px 0px;
+}
+.text-contant h3{
+    font-size: 55px;
+    font-weight: 700;
+    padding-bottom: 20px;
+}
+.text-contant p{
+    font-size: 18px;
+    font-weight: 400;
+    color: rgb(112, 112, 112);
+    padding-bottom: 20px;
+}
+.text-contant button{
+    font-size: 20px;
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+    padding: 16px 12px;
+    border-radius: 5px;
+    background: rgb(255, 89, 89);
+    margin-top: 10px;
+    border: none;
+} 
+
+.img-contant{
+    width: 456px;
+    height: 477px;
+    border: 2px solid red;
+}
+.img-contant img{
+    width: 100%;
+    height: 100%;
+}
 /* rrrrrrrrrrr */
 @media screen and (max-width: 576px) {
     body{
+        width: auto;
         margin: 30px 20px;
     }
     header{
@@ -233,5 +288,29 @@ header{
     .donate-card{
         width: auto;
         height: auto;
+        padding-right: 0px;
+    }
+
+    /* your donate */
+    .Your-donation{
+        margin-top: 50px;
+    }
+    .your-donation-section{
+        width: auto;
+        height: auto;
+        flex-direction: column-reverse;
+    }
+    .text-contant {
+        width: auto;
+        height: auto;
+        margin: 30px 0px;
+    }
+    .img-contant {
+        width: auto;
+        height: auto;
+    }
+    .text-contant h3 {
+        font-size: 36px;
     }
 }
+
